add generate content

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -157,6 +157,9 @@ spec:
                                   type: integer
                               type: object
                             type: array
+                          location:
+                            description: Location is a Timezone Location
+                            type: string
                           months:
                             description: Months is a list of MonthRange
                             items:
