--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -169,6 +169,10 @@
                                 },
                                 "type": "array"
                               },
+                              "location": {
+                                "description": "Location is a Timezone Location",
+                                "type": "string"
+                              },
                               "months": {
                                 "description": "Months is a list of MonthRange",
                                 "items": {
