--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -14,7 +14,8 @@ jobs:
           days-before-stale: 60
           days-before-issue-close: 120
           days-before-pr-close: -1  # Prevent closing PRs
-          exempt-issue-labels: 'kind/feature,help-wanted,kind/bug'
+          exempt-issue-labels: 'kind/feature,help wanted,kind/bug'
           stale-issue-label: 'stale'
           stale-pr-label: 'stale'
           exempt-draft-pr: true
+          operations-per-run: 500
