--- a/bundle.yaml
+++ b/bundle.yaml
@@ -5844,6 +5844,9 @@ spec:
                           they always include EndsAt.
                         pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                         type: string
+                      slackApiUrl:
+                        description: Slack Api Url
+                        type: string
                     type: object
                   name:
                     description: The name of the AlertmanagerConfig resource which
